kustomize/environments/overlays/gloo-edge/virtualservice/petstore/single/headermatch/petstore-vs-header.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore-vs-headermatch
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'petstore.solo.io'
    routes:
    - matchers:
      - headers:
            - name: header1
              value: value1
            - name: header2
              value: value2
      - exact: /all-pets
      options:
        prefixRewrite: /api/pets
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
